<resources>
    <string name="app_name">MyHomeworkApp</string>
    <string name="inputText"> </string>
    <string name="demon_text">Hello</string>
    <string name="R2DBtn">DOLLAR</string>
    <string name="R2EBtn">EURO</string>
    <string name="R2WBtn">WON</string>
    <string name="Result"></string>
    <string name="input_hint">input RMB</string>
    <string name="R2DErate_input_hint">Input RMB to Dollar Exchange Rate</string>
    <string name="R2EErate_input_hint">Input RMB to EUR Exchange Rate</string>
    <string name="R2WErate_input_hint">Input RMB to WON Exchange Rate</string>
    <string name="SavsBtn">SAVE</string>
    <string name="config_btn">CONFIG</string>
    <string name="netBtn">NETWORKTEST</string>
    <string name="agreeBtn">赞成</string>
    <string name="abstentionBtn">放弃</string>
    <string name="disagreeBtn">反对</string>
    <string name="abstentionBtn1">弃权</string>
</resources>