<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3" >

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_hint"
            android:inputType="textPersonName"
            android:text="@string/inputText"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/demon_text"
            android:textSize="40sp" />

        <Button
            android:id="@+id/R2DBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="4dp"
            android:text="@string/R2DBtn"
            android:textSize="18sp"
            android:background="@android:color/holo_purple"/>

        <Button
            android:id="@+id/R2EBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="4dp"
            android:text="@string/R2EBtn"
            android:textSize="18sp"
            android:background="@android:color/holo_purple"/>

        <Button
            android:id="@+id/R2WBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="24dp"
            android:text="@string/R2WBtn"
            android:textSize="18sp"
            android:background="@android:color/holo_purple"/>

        <Button
            android:id="@+id/config_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:background="@android:color/holo_purple"
            android:text="@string/config_btn"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>