<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoteActivity">

    <Button
        android:id="@+id/agreeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agreeBtn"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="202dp" />

    <Button
        android:id="@+id/disagreeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disagreeBtn"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="299dp" />

    <Button
        android:id="@+id/abstentionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abstentionBtn1"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="405dp" />
</android.support.constraint.ConstraintLayout>