<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity4" >

    <EditText
        android:id="@+id/R2DErate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/R2DErate_input_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/R2EErate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/R2EErate_input_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/R2WErate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/R2WErate_input_hint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/holo_purple"
        android:text="@string/SavsBtn"
        android:textSize="18sp" />
</LinearLayout>